# delta

./: .audit.toml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  VERSION  osv-scanner.toml  tarpaulin-report.json
.claude/: MEMORY.md
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  dependency-update.yml  release-automation.yml  release.yml
config/: delta.dev.toml  delta.docker.toml  delta.example.toml  delta.private.toml
crates/delta-api/: Cargo.toml
crates/delta-api/src/: auth.rs  extractors.rs  helpers.rs  lib.rs  main.rs  middleware.rs  routes.rs  ssh.rs  state.rs
crates/delta-api/src/routes/: ai.rs  ark.rs  artifacts.rs  audit.rs  auth.rs  backup.rs  badges.rs  branches.rs  collaborators.rs  federation.rs  forks.rs  git.rs  health.rs  lfs.rs  mcp.rs  oci.rs  pipelines.rs  pulls.rs  repos.rs  signing.rs  ssh_keys.rs  status_checks.rs  web.rs  webhooks.rs  workspaces.rs
crates/delta-ci/: Cargo.toml
crates/delta-ci/src/: container.rs  events.rs  executor.rs  lib.rs  parser.rs  pipeline.rs  runner.rs  sandbox.rs  trigger.rs  workflow.rs
crates/delta-core/: Cargo.toml
crates/delta-core/migrations/: 001_initial.sql  002_git_protocol.sql  003_pull_requests.sql  004_cicd.sql  005_registry.sql  006_collaborators.sql  007_forks_and_templates.sql  008_lfs.sql  009_cascade_fixes.sql  010_search.sql  011_federation.sql  012_encryption.sql  013_workspaces.sql
crates/delta-core/src/: agnos.rs  ai.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  scopes.rs
crates/delta-core/src/db/: ark_package.rs  artifact.rs  audit.rs  branch_protection.rs  collaborator.rs  download_stats.rs  encryption.rs  federation.rs  lfs.rs  oci.rs  pipeline.rs  pull_request.rs  release.rs  repo.rs  retention.rs  search.rs  secret.rs  signing.rs  ssh_key.rs  status_check.rs  user.rs  webhook.rs  workspace.rs
crates/delta-core/src/models/: branch_protection.rs  collaborator.rs  lfs.rs  pull_request.rs  repo.rs  ssh_key.rs  user.rs  webhook.rs  workspace.rs
crates/delta-core/tests/: db_audit_test.rs  db_cicd_test.rs  db_encryption_test.rs  db_federation_test.rs  db_registry_test.rs  db_repo_test.rs  db_review_test.rs  db_tests.rs  db_user_test.rs  db_workspace_test.rs  phase2_tests.rs  phase3_tests.rs  phase4_tests.rs  phase5_tests.rs  phase8_tests.rs
crates/delta-core/tests/common/: mod.rs
crates/delta-registry/: Cargo.toml
crates/delta-registry/src/: ark.rs  artifact.rs  lfs_store.rs  lib.rs  oci.rs  retention.rs  signing.rs  store.rs
crates/delta-vcs/: Cargo.toml
crates/delta-vcs/src/: browse.rs  diff.rs  hosting.rs  lib.rs  merge.rs  protocol.rs  refs.rs  validate.rs  workspace.rs
crates/delta-vcs/tests/: diff_merge_test.rs  git_protocol_test.rs
crates/delta-web/: Cargo.toml
crates/delta-web/src/: filters.rs  lib.rs  pipelines.rs  pulls.rs  repo.rs  settings.rs  user.rs
crates/delta-web/templates/: layout.html
crates/delta-web/templates/pipelines/: detail.html  list.html
crates/delta-web/templates/pulls/: detail.html  list.html
crates/delta-web/templates/repo/: blame.html  blob.html  commit.html  commits.html  tree.html
crates/delta-web/templates/settings/: repo.html
crates/delta-web/templates/user/: profile.html
deploy/: delta.service
deploy/agnosticos/: delta.pkg.toml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/architecture/: overview.md
docs/development/: contributing.md  dependency-watch.md  desktop-app.md  roadmap.md  versioning.md
scripts/: build.sh  setup-dev.sh  test.sh
