[workspace]
resolver = "2"
members = [
    "crates/delta-core",
    "crates/delta-vcs",
    "crates/delta-api",
    "crates/delta-ci",
    "crates/delta-registry",
    "crates/delta-web",
]

[workspace.package]
version = "2026.3.11"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/agnostos/delta"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP / API
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2"
blake3 = "1"

# Git protocol
gix = "0.72"

# SSH
russh = "0.57"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# Auth
argon2 = "0.5"
getrandom = "0.3"
base64 = "0.22"

# Testing
tempfile = "3"

# Workspace crates
delta-core = { path = "crates/delta-core" }
delta-vcs = { path = "crates/delta-vcs" }
delta-api = { path = "crates/delta-api" }
delta-ci = { path = "crates/delta-ci" }
delta-registry = { path = "crates/delta-registry" }
delta-web = { path = "crates/delta-web" }
