[package]
name = "delta-api"
description = "REST API server for the Delta platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
delta-core = { workspace = true }
delta-vcs = { workspace = true }
delta-ci = { workspace = true }
delta-registry = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
