[package]
name = "delta-ci"
description = "CI/CD pipeline engine for Delta"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
delta-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
