[package]
name = "delta-core"
description = "Core types, traits, and shared logic for the Delta platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
getrandom = { workspace = true }
reqwest = { workspace = true }
hex = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
