[package]
name = "delta-vcs"
description = "Git-compatible version control backend for Delta"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
delta-core = { workspace = true }
gix = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
